--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ openlxp-notification >=1.4.4, <1.5.0
 
 # openlxp-P1-notification ==0.0.3
 
-openlxp-xia >=1.4.11, <1.5.0
+openlxp-xia ==1.7.0
 
 openpyxl >=3.0.7 , <3.1.0
 
