--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,6 @@ botocore~=1.23.45
 
 celery>=5.2.0, <5.2.3
 
-clamd==1.0.2
-
 confusable_homoglyphs==3.2.0
 
 coverage>=5.5,<6.0
@@ -54,7 +52,7 @@ openlxp-notification >=1.4.4, <1.5.0
 
 # openlxp-P1-notification ==0.0.3
 
-openlxp-xia >=1.4.11, <1.5.0
+openlxp-xia ==0.0.42
 
 openpyxl >=3.0.7 , <3.1.0
 
@@ -68,7 +66,7 @@ python-slugify>=8.0.1
 
 pytz >=2021.1, <2021.3
 
-redis==4.1.2
+redis==6.4.0
 
 requests~=2.27.1
 
