--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ django-celery-results~=2.4.0
 
 django-colorfield>=0.11.0
 
+django-csp>=3.7,<3.8
+
 django-health-check>3.18.0, <3.19.0
 
 django-model-utils>=4.1.1,<4.2.0
@@ -53,7 +55,7 @@ numpy==1.26.4
 
 openlxp-notification >=1.4.4, <1.5.0
 
-openlxp-xia >=1.4.11, <1.5.0
+openlxp-xia==1.7.1
 
 openpyxl >=3.0.7 , <3.1.0
 
