--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       LOG_PATH: "${LOG_PATH}"
       CELERY_BROKER_URL: "${CELERY_BROKER_URL}"
       CELERY_RESULT_BACKEND: "${CELERY_RESULT_BACKEND}"
+      HOSTS: "${HOSTS}"
       P1PS_DOMAIN: "${P1PS_DOMAIN}"
       TEAM_TOKEN: "${TEAM_TOKEN}"
       TEAM_ID: "${TEAM_ID}"
